--- a/Sprint6/Exercícios/labAWSLambda/exDocker/Dockerfile
+++ b/Sprint6/Exercícios/labAWSLambda/exDocker/Dockerfile
@@ -1,15 +1,6 @@
-FROM amazonlinux:2.0.20200602.0
-
+FROM amazonlinux:2023
 RUN yum update -y
-
 RUN yum install -y \
-    python3-pip \
-    zip 
-
+python3-pip \
+zip
 RUN yum -y clean all
-
-RUN python3.7 -m pip install --upgrade pip
-
-COPY requirements.txt .
-
-RUN python3.7 -m pip install -r requirements.txt
